--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://mikailgultekin.com/"
+baseURL = "http://mikailgultekin.com/"
 languageCode = "en-us"
 title = "Mikail Gültekin"
 
