--- a/config.toml
+++ b/config.toml
@@ -11,44 +11,43 @@ googleAnalytics = "UA-134220309-1" # Enter your tracking code to enable Google A
 # disqusShortname = "spf13" # Disable comments by leaving disqusShortname empty
 
 [params]
-	name = "Mikail Gültekin"
-	description = "My Personal Blog"
-	bio = "Blogger & Programmer"
-	twitter = "Your Twitter account" # Enter optionally your twitter account
-	enableRSS = true
+name = "Mikail Gültekin"
+description = "My Personal Blog"
+bio = "Blogger & Programmer"
+twitter = "gultekinmikail" # Enter optionally your twitter account
+enableRSS = true
 
-	# Integrate Javascript files or stylesheets by adding the url to the external assets or by
-	# linking local files with their path relative to the static folder, e.g. "css/styles.css"
-	customCSS = []
-	customJS  = []
+# Integrate Javascript files or stylesheets by adding the url to the external assets or by
+# linking local files with their path relative to the static folder, e.g. "css/styles.css"
+customCSS = []
+customJS  = []
 
-	# The variables below are optionally too and can be used to
-	# translate or customize each string of the theme.
+# The variables below are optionally too and can be used to
+# translate or customize each string of the theme.
 
-	# Navigation links
-	home = ""
-	subscribe = ""
-	# Pagination links
-	olderPosts = ""
-	newerPosts = ""
-	readMore = ""
-	copyright = ""
-	# Sharing options and author information in posts
-	aboutAuthor = "I'm an blogger."
-	tweet = ""
-	share = ""
-	# 404 page
-	title404 = ""
-	subtitle404 = ""
+# Navigation links
+home = ""
+# subscribe = ""
 
-	# Choose a font for the social icons in the footer. Either "mono-social" or "font-awesome"
-	iconFont = "mono-social"
-    # The social icons can be styled differently if you use mono as font - circle, rounded, or empty
-    socialIconStyle = "circle"
+# Pagination links
+olderPosts = ""
+newerPosts = ""
+readMore = ""
+copyright = ""
 
-# Add additional social link entries underneath
-[social]
-    twitter  = "https://www.twitter.com/"
-    facebook = "https://www.facebook.com/"
-    github   = "https://www.github.com/"
-    dribble  = "https://www.dribbble.com/"
+# Sharing options and author information in posts
+aboutAuthor = "Blogger & Programmer"
+tweet = ""
+share = ""
+
+# 404 page
+title404 = ""
+subtitle404 = ""
+
+iconFont = "mono-social" # Choose a font for the social icons in the footer. Either "mono-social" or "font-awesome"
+socialIconStyle = "rounded" # The social icons can be styled differently if you use mono as font - circle, rounded, or empty
+
+[social] # Add additional social link entries underneath
+twitter  = "https://twitter.com/gultekinmikail/"
+github   = "https://github.com/mikail-gultekin/"
+linkedin = "https://www.linkedin.com/in/mikailgultekin/"
